combinadores css ok

--- a/exemplos CSS/index.html
+++ b/exemplos CSS/index.html
@@ -31,7 +31,7 @@
     <div>
         <fieldset>
             <legend> Ítens: </legend>
-            <ul style="background-color: rgb(42, 129, 129);;">
+            <ul>
                 <li> Uma linha </li>
                 <li> Outra linha </li>
                 <li class="seletor-class">Uma linha defnida pelo seletor class </li>
@@ -40,6 +40,11 @@
                 <li> Outra linha </li>
                 <li class="seletor-class seletor-uppercase">Outra linha definida pela mesma classe, com mais uma classe
                     sobreposta
+                </li>
+                <li>Item
+                    <ul>
+                        <li>Subitem definido com combinador descendente</li>
+                    </ul>
                 </li>
             </ul>
         </fieldset>
